[project]
name = "prompt-formatter"
version = "0.1.0"
description = ""
authors = [
    {name = "Osman Siddique",email = "osmansiddiquer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "prompt_formatter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
